--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,14 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://maven.google.com" }
+        mavenCentral()
+        mavenLocal()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath "io.realm:realm-gradle-plugin:3.5.0"
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath "io.realm:realm-gradle-plugin:4.3.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,6 +19,8 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "https://maven.google.com" }
+        mavenLocal()
         jcenter()
     }
 }
