--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,12 @@ buildscript {
         maven { url "https://maven.google.com" }
         mavenCentral()
         mavenLocal()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath "io.realm:realm-gradle-plugin:4.3.1"
+        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath "io.realm:realm-gradle-plugin:5.0.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
